--- a/index.html
+++ b/index.html
@@ -449,10 +449,8 @@
                     </p>
                 </div>
                 
-                <!-- Netlify Forms - submissions go to Netlify dashboard and forward to email -->
-                <form id="waitlist-form" name="waitlist" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="space-y-6">
-                    <input type="hidden" name="form-name" value="waitlist">
-                    <p class="hidden"><label>Don't fill this out: <input name="bot-field"></label></p>
+                <!-- Formspree Form - free form backend -->
+                <form id="waitlist-form" action="https://formspree.io/f/xpwzqvgj" method="POST" class="space-y-6">
                     <div>
                         <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">
                             Email Address *
@@ -593,14 +591,11 @@
             submitBtn.disabled = true;
             submitBtn.textContent = 'Joining...';
             
-            // Submit to Netlify Forms
-            fetch('/', {
+            // Submit to Formspree
+            fetch('https://formspree.io/f/xpwzqvgj', {
                 method: 'POST',
-                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-                body: new URLSearchParams({
-                    'form-name': 'waitlist',
-                    ...formData
-                }).toString()
+                headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' },
+                body: JSON.stringify(formData)
             })
             .then(response => {
                 if (response.ok) {
